--- a/style.css
+++ b/style.css
@@ -18,6 +18,22 @@ header {
     z-index: 1002;
 }
 
+#sidebar-toggle {
+    position: fixed;
+    left: 0;
+    top: 70px; /* 初始位置与 header 底部对齐 */
+    background-color: #1da1f2;
+    color: white;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+    z-index: 1001;
+}
+
 #sidebar {
     position: fixed;
     left: 0;
@@ -33,22 +49,6 @@ header {
 
 .sidebar.collapsed {
     transform: translateX(-100%);
-}
-
-.sidebar-toggle {
-    position: fixed;
-    left: 0;
-    top: 70px; /* 初始位置与 header 底部对齐 */
-    background-color: #1da1f2;
-    color: white;
-    width: 30px;
-    height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 0 5px 5px 0;
-    cursor: pointer;
-    z-index: 1001;
 }
 
 .sidebar-content {
